# testing_batch_editing_obsidian

./: pyproject.toml
